...
    <string name="FAQ_string"><u>FAQ</u></string>
    <string name="about_us">Cart App will let you buy your choice of vegetables from NGO\'s while ensuring quality product and delivery</string>
    <string name="app_name">Lokacart</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_enquiry_form">Enquiry form</string>
    <string name="title_activity_details">Details</string>
    <string name="title_fragment_product">Products</string>
    <string name="title_fragment_placed_order">Placed orders</string>
    <string name="title_fragment_processed_order">Processed orders</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="title_fragment_referral">Referral</string>
    <string name="title_fragment_change_organisation">Organisations</string>
    <string name="title_fragment_feedback">Feedback</string>
    <string name="title_fragment_contact_us">Contact Us</string>
    <string name="title_fragment_terms_and_conditions">Terms and conditions</string>
    <string name="title_fragment_faq">FAQs</string>
    <string name="title_fragment_about_us">About Us</string>
    <string name="title_dialog_change_password">Change password</string>
    <string name="title_dialog_change_mobile_number">Change mobile number</string>

    <string name="textview_welcome_log_in">Welcome, Please Login</string>
...
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>

    <string name="button_signin">Sign In</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_get_OTP">Get OTP</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_edit">Edit</string>
    <string name="button_change_organisation">Change Organisation</string>
    <string name="button_Leave_organisation">Leave Organisation</string>
...
    <string name="error_required">Required</string>

    <string name="snackbar_press_back_once_more_to_exit">Press back once more to exit</string>


    <string name="menu_products">Products</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_placed_orders">Placed orders</string>
    <string name="menu_processed_orders">Processed orders</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_change_organisation">Organisation</string>
    <string name="menu_referrals">Referrals</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_terms_and_conditions">Terms and conditions</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_feedback">Feedbacks</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_product_detail">ProductDetail</string>
    <string name="title_activity_cart">Cart</string>

    <string name="stepper_1">Get access to all farm products\nranging from vegetables to clothing</string>
    <string name="stepper_2">Place an order in a touch</string>
    <string name="stepper_3">Pay when goods are delivered</string>

    <string name="label_activity_ordersubmit_message1">Order Placed!</string>
    <string name="label_activity_ordersubmit_message2">Thank you for choosing Cart</string>
    <string name="label_activity_ordersubmit_btn_done">Done</string>
    <string name="label_activity_ordersubmit_orderid">Your Order ID</string>
    <string name="label_toast_sorry_we_are_unable_to_process_order_items">Sorry we are unable to process your order items </string>
    <string name="label_toast_Sorry_we_were_unable_to_process_your_request_Please_try_again_later">Sorry, we were unable to process your request.Please try again later</string>
    <string name="label_toast_out_of_stock">- OUT OF STOCK !!</string>

    <string name="alert_whoops">WHOOOOPS!!!</string>
...
