...
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/edit"
                            android:id="@+id/ivEdit"
                            android:tint="@color/profile_tick"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"/>

                        <TextView
                            android:layout_width="match_parent"
...
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/tick"
                        android:tint="@color/profile_tick"
                        android:layout_marginTop="17dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:id="@+id/ivDone"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tilFName"
                        android:layout_below="@+id/tEditProdilePhoto"
                        android:textColorHint="@color/colorAccent">

                        <EditText
                            android:id="@+id/eEditProfileFName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/hint_first_name"
                            android:textColor="@color/black"
                            android:singleLine="true"
...
                        android:layout_height="wrap_content"
                        android:id="@+id/tilLName"
                        android:layout_below="@+id/tilFName"
                        android:textColorHint="@color/colorAccent">

                        <EditText
                            android:id="@+id/eEditProfileLName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/hint_last_name"
                            android:textColor="@color/black"
                            android:singleLine="true"
...
                        android:id="@+id/tilPincode"
                        android:textColorHint="@color/colorAccent">

                        <EditText
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:id="@+id/eEditProfilePincode"
                            android:hint="@string/hint_pincode"
                            android:inputType="number"
                            android:maxLength="6"
                            android:textCursorDrawable="@null"
                            />
                    </android.support.design.widget.TextInputLayout>
...
